# rust_tasks

fibonacci/: Cargo.toml
fibonacci/src/: fib.rs  main.rs
hello/: Cargo.toml
hello/src/: main  main.rs
iron-gcd/: Cargo.toml
iron-gcd/src/: gcd.rs  main.rs
mandelbrot_set/: Cargo.toml
mandelbrot_set/src/: bounds.rs  main.rs  math.rs  parsing.rs  render.rs
