[package]
name = "iron-gcd"
version = "0.5.0"
authors = ["Vasiliy Yashkov <vasiliy.yashkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.0"
mime = "0.3.13"
router = "0.6.0"
urlencoded = "0.6.0"
